Source/WebKit/UIProcess/mac/PageClientImplMac.mm
@@ -289,6 +289,7 @@ void PageClientImpl::didCommitLoadForMainFrame(const String& mimeType, bool useC
 {
     m_impl->updateSupportsArbitraryLayoutModes();
     m_impl->dismissContentRelativeChildWindowsWithAnimation(true);
+    m_impl->clearPromisedDragImage();
 }
 
 void PageClientImpl::didFinishLoadingDataForCustomContentProvider(const String& suggestedFilename, const IPC::DataReference& dataReference)
